--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@ ga('send', 'pageview');
                 {% if page.url == "/" %}
                 <li class="nav-item active">
                 {% else %}
-                <li class="nav-item">
+                <li class="nav-item active">
                 {% endif %}
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
                 </li>
