--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ disqus: false
 archive: false
 post_class: post-template
 ---
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 <!-- Begin Article
 ================================================== -->
